--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-qiskit
-qiskit-terra
-qiskit-aer
-numpy
-matplotlib
+streamlit==1.42.2
+qiskit==1.0.2
+qiskit-aer==0.13.2
+numpy==2.2.3
+matplotlib==3.8.2
